--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'io.micrometer:micrometer-tracing-bridge-otel'
 	implementation 'io.opentelemetry:opentelemetry-exporter-otlp'
+	implementation(platform("io.opentelemetry:opentelemetry-bom:1.35.0"))
+  	implementation("io.opentelemetry:opentelemetry-api")
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 }
 
